package lab2;

/**
 * Базовий інтерфейс If1.
 * Містить три методи meth1(), meth2(), meth3().
 * Використовується як основа для If2 і If3.
 * @author Artem Davydchuk
 * @version 1.0
 */

public interface If1 {
    /**
     * Перший метод інтерфейсу If1.
     */
    void meth1();

    /**
     * Другий метод інтерфейсу If1.
     */
    void meth2();

    /**
     * Третій метод інтерфейсу If1.
     */
    void meth3();
}
