package lab2;

/**
 * Інтерфейс If2 успадковує If1.
 * Призначений для розширення функціональності базового інтерфейсу.
 * @author Artem Davydchuk
 * @version 1.0
 */

public interface If2 extends If1 {}